[tool.poetry]
name = "redhat_insight_api"
version = "0.1.0"
description = "Package for interacting with the redhat insights API"
authors = ["Yahya.Guezide <yahya.guezide@sva.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = ["missing-function-docstring"]

[tool.black]
line-length = 100

[tool.mypy]
python_executable = "/Users/Yahya.Guezide/Library/CloudStorage/OneDrive-SVASystemVertriebAlexanderGmbH/projects/redhat_insight_api/.venv/bin/python"

[tool.pylint.main]
init-hook = """
try:
    import pylint_venv
except ImportError:
    pass
else:
    pylint_venv.inithook()
"""
